Removed git feed

--- a/index.html
+++ b/index.html
@@ -253,15 +253,7 @@
             <section class="github section">
                 <div class="section-inner">
                     <h2 class="heading">Mi GitHub</h2>
-
-                    <div id="github-graph" class="calendar">
-
-                    </div><!--//github-graph-->
-
-                    <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->
-                    <div id="feed" class="feed">
-                    </div><!--//ghfeed-->
-
+                    <div id="github-graph" class="calendar"></div>
                 </div><!--//secton-inner-->
             </section><!--//section-->
         </div><!--//primary-->
