Update bio text

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <br>
                             Actualmente me encuentro personalmente inmerso en <a href="http://www.coinmarketpred.com">CoinMarketPred</a>,
                             una plataforma con muchas funcionalidades relacionadas con el novedoso mundo de la
-                            cryptomoneda el cual me atrajo hace un año.
+                            cryptomoneda.
 
                             Para todo esto se ha empleado el framework Symfony en sus versiones 3.4 y 4.1, a parte
                             HTML5 y Sass todo bajo WEBPACK y YARN. mySQL y servidores AMAZON.
@@ -269,8 +269,7 @@
                             <li><i class="fa fa-google"></i><span class="sr-only">Gmail:</span><a
                                     href="mailto:carmelormairez79@gmail.com">carmeloramirez79@gmail.com</a></li>
                             <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a
-                                    href="http://kar.cat">http
-                                ://www.kar.cat</a></li>
+                                    href="http://kar.cat">http ://www.kar.cat</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
