--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                             <h3 class="title">Full Stack Developer - <span
                                     class="place"><a href="https://www.plyzerintelligence.com/">Plyzer Intelligence</a></span>
                                 <span
-                                        class="year">(2016 -
-                                        2017)</span></h3>
+                                        class="year">(Mayo 2017 -
+                                        ACTUALIDAD)</span></h3>
                             <p>Comparador de precios de Farmacia y Parafarmacia de España, Canada y Australia.</p>
                             <ul>
                                 <li>
@@ -225,8 +225,7 @@
                         <div class="item">
                             <h3 class="title">Web Developer - <span
                                     class="place"><a href="http://mediaadgo.com/">Media ADgo!</a></span> <span
-                                    class="year">(2017 -
-                                        Present)</span></h3>
+                                    class="year">(2016 - Mayo 2017)</span></h3>
                             <p>Desarrollador web que utiliza principalmente tecnologías del lado del servidor.
                                 Captación de datos de usuario, comunicación API, WebServices, Bases de datos</p>
                             <ul>
