Update bio text

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <div class="section-inner">
                     <h2 class="heading">Ultimos proyectos</h2>
                     <div class="content">
+
                         <div class="item featured text-center">
                             <h3 class="title"><a href="http://www.coinmarketpred.com"
                                                  target="_blank">CoinMarketPred</a></h3>
@@ -142,6 +143,36 @@
                             <a class="btn btn-cta-secondary" href="http://www.coinmarketpred.com"
                                target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a CoinMarketPred</a>
                             </div><!--//item-->
+                        <div class="item featured text-center">
+                            <h3 class="title"><a href="http://www.coinmarketpred.com"
+                                                 target="_blank">Concurso de la Tapa</a></h3>
+                            <p class="summary">Plataforma para concursos de tapa, para familias, amigos, grupos y
+                                organizaciones</p>
+
+                            <div class="featured-image">
+                                <a href="https://www.concursodelatapa.com" target="_blank">
+                                    <img alt="project name"
+                                         class="img-thumbnail project-image" src="assets/images/projects/tapa.png"/>
+                                </a>
+                                <div class="ribbon">
+                                    <div class="text">New</div>
+                                </div>
+                            </div>
+                            <div class="desc text-left">
+                                <h5>Algunas funcionalidades</h5>
+                                <ul>
+                                    <li>Creación de concursos</li>
+                                    <li>Creación de ediciones de concurso</li>
+                                    <li>Creación de equipo/concursante</li>
+                                    <li>Creación de tapas concursantes por equipo y edición</li>
+                                    <li>Muestra de detalle de tapa con todos los detalles e imagenes</li>
+                                    <li>Ranking competición</li>
+                                    <li>Cálculo de votación</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <a class="btn btn-cta-secondary" href="http://www.concursodelatapa.com"
+                               target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a Concurso de la Tapa</a>
+                        </div><!--//item-->
                         <hr class="divider"/>
                         <div class="item row">
                             <div class="col-md-4 col-sm-4 col-xs-12">
@@ -391,7 +422,7 @@
                                 <p>
                                     <i class="fa fa-quote-left"></i>Carmelo es una persona apasionada y entusiasta con
                                     su
-                                    trabajo, siempre está investigando los nuevos lenguajes de programación y intentando
+                                    trabajo, siempre está investigando los nuevos lenguajes de programación e intentando
                                     adquirir las mejores métodos de trabajo
                                     y buenas prácticas</p>
 
