Update bio text

--- a/index.html
+++ b/index.html
@@ -69,11 +69,19 @@
                 <div class="section-inner">
                     <h2 class="heading">Sobre mi</h2>
                     <div class="content">
-                        <p><strong>Emprendedor, ilusionado y trabajador</strong>, desde que comencé no he dejado de
+                        <p>
+                            <strong>Emprendedor, ilusionado y trabajador</strong>, desde que comencé no he dejado de
                             programar
                             y pensar en proyectos e ideas que podía hacer.
                             <br>
-                            Actualmente trabajando en Start-Up <a href="http://plyzertechnologies.com/">Plyzer
+                            Actualmente trabajando en Sabadell para la empresa <a href="http://www.hispanetwork.com/">Hispanetwork</a>,
+                            empresa multiproyecto.
+                            Bajo las funciones de Full-stack developer aportándome un nuevo reto de conocimiento de
+                            framework
+                            <a href="https://www.yiiframework.com/">Yii 2</a>.
+                            <br>
+                            Hasta diciembre de 2018 trabajando en PlyzerTechnologies <a
+                                href="http://plyzertechnologies.com/">Plyzer
                                 Tehcnologies</a>, una empresa con claro
                             interés
                             por la Inteligencia Artificial buscando siempre soluciones para poder ofrecer trato de datos
@@ -91,8 +99,6 @@
 
                             Para todo esto se ha empleado el framework Symfony en sus versiones 3.4 y 4.1, a parte
                             HTML5 y Sass todo bajo WEBPACK y YARN. mySQL y servidores AMAZON.
-
-
                         </p>
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -142,7 +148,7 @@
                             </div><!--//desc-->
                             <a class="btn btn-cta-secondary" href="http://www.coinmarketpred.com"
                                target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a CoinMarketPred</a>
-                            </div><!--//item-->
+                        </div><!--//item-->
                         <div class="item featured text-center">
                             <h3 class="title"><a href="http://www.coinmarketpred.com"
                                                  target="_blank">Concurso de la Tapa</a></h3>
@@ -312,10 +318,18 @@
 
                         <div class="skillset">
                             <div class="item">
-                                <h3 class="level-title">SYMFONY FRAMEWORK<span class="level-label">Trabajando!
+                                <h3 class="level-title">Symfony<span class="level-label">Trabajando!
                                         </span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="99%">
+                                    </div>
+                                </div><!--//level-bar-->
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="level-title">Yii 2<span class="level-label">Trabajando!
+                                        </span></h3>
+                                <div class="level-bar">
+                                    <div class="level-bar-inner" data-level="50%">
                                     </div>
                                 </div><!--//level-bar-->
                             </div><!--//item-->
