Update bio text

--- a/index.html
+++ b/index.html
@@ -108,7 +108,121 @@
                 <div class="section-inner">
                     <h2 class="heading">Ultimos proyectos</h2>
                     <div class="content">
+                        <div class="item featured text-center">
+                            <h3 class="title"><a href="http://www.coinmarketpred.com"
+                                                 target="_blank">Ada Design</a></h3>
+                            <p class="summary">Web con productos dedicados a mobiliario realizado con cartón.</p>
 
+                            <div class="featured-image">
+                                <a href="https://www.adadesign.carmeloramirez.com" target="_blank">
+                                    <img alt="project name"
+                                         class="img-responsive project-image" src="assets/images/ada.png"/>
+                                </a>
+                                <div class="ribbon">
+                                    <div class="text">New</div>
+                                </div>
+                            </div>
+                            <div class="desc text-left">
+                                <p>Página básica con gestión de usuarios, productos, categorias, secciones y portada</p>
+                                <strong>Web completamente personalizada</strong>
+
+                                <h5>Tecnologías empleadas</h5>
+                                <ul>
+                                    <li>Symfony 4.3</li>
+                                    <li>Bootstrap 4</li>
+                                    <li>jQuery</li>
+                                    <li>mySQL</li>
+                                    <li>WEBPACK</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <div class="desc text-left">
+                                <h5>Algunas funcionalidades</h5>
+                                <ul>
+                                    <li>Creación ,edición de productos, categorias, secciones, etc...</li>
+                                    <li>Seo dinámico</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <a class="btn btn-cta-secondary" href="http://www.adadesign.carmeloramirez.com"
+                               target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a Ada Design</a>
+                        </div><!--//item-->
+                        <div class="item featured text-center">
+                            <h3 class="title"><a href="http://www.coinmarketpred.com"
+                                                 target="_blank">Ketpedia</a></h3>
+                            <p class="summary">Proyecto subvencionado unión europea, tecnologías, investigación tecnologías de construcción</p>
+
+                            <div class="featured-image">
+                                <a href="https://www.ketpedia.com" target="_blank">
+                                    <img alt="project name"
+                                         class="img-responsive project-image" src="assets/images/ketpedia.png"/>
+                                </a>
+                                <div class="ribbon">
+                                    <div class="text">New</div>
+                                </div>
+                            </div>
+                            <div class="desc text-left">
+                                <p>Pedia con contribuciones de usuarios, revisiones, y validaciones por
+                                    parte de revisores. Aplicación completa con creación de pdf, agentes, elementos, categorias, sinergias etc...</p>
+                                <h5>Tecnologías empleadas</h5>
+                                <ul>
+                                    <li>Yii2</li>
+                                    <li>CSS</li>
+                                    <li>jQuery</li>
+                                    <li>mySQL</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <div class="desc text-left">
+                                <h5>Algunas funcionalidades</h5>
+                                <ul>
+                                    <li>Creación, contribución, y revisión de elementos</li>
+                                    <li>Sinergia entre empresas</li>
+                                    <li>Panel de control de usuarios, agentes, revisores</li>
+                                    <li>Sistema de notificaciones email y web</li>
+                                    <li>Creación de libros autoáticos PDF</li>
+                                    <li>Creació de newsletter</li>
+                                    <li>Creació de newsletter</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <a class="btn btn-cta-secondary" href="http://www.ketpedia.com"
+                               target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a ketpedia.com</a>
+                        </div><!--//item-->
+                        <div class="item featured text-center">
+                            <h3 class="title"><a href="http://www.coinmarketpred.com"
+                                                 target="_blank">Automatrade</a></h3>
+                            <p class="summary">Bot auto trading Criptomonedas</p>
+
+                            <div class="featured-image">
+                                <a href="https://www.automatrade.com" target="_blank">
+                                    <img alt="project name"
+                                         class="img-responsive project-image" src="assets/images/automatrade.png"/>
+                                </a>
+                            </div>
+                            <div class="desc text-left">
+                                <p>Automatrade se encarga de realizar microoperaciones constantes usando conexiones con las cuentas del exchange del usuario
+                                    de tal manera que el usuario delega responsabilidad en el cálculo de las operaciones al bot que se encarga de comprar y vender según la configuración
+                                    que cada usuario active en su bot.</p>
+                                <h5>Tecnologías empleadas</h5>
+                                <ul>
+                                    <li>Symfony 4.2</li>
+                                    <li>Webpack</li>
+                                    <li>Sass</li>
+                                    <li>RabbitMQ</li>
+                                    <li>jQuery</li>
+                                    <li>mySQL</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <div class="desc text-left">
+                                <h5>Algunas funcionalidades</h5>
+                                <ul>
+                                    <li>Creación de bots para usuario</li>
+                                    <li>Automatización de inversiones, entradas y salidas</li>
+                                    <li>Conexión API Exchange</li>
+                                    <li>Cola de operaciones uso de RabbitMQ</li>
+                                    <li>Gestión de usuarios</li>
+                                </ul>
+                            </div><!--//desc-->
+                            <a class="btn btn-cta-secondary" href="https://www.automatrade.com"
+                               target="_blank"><i class="fa fa-thumbs-o-up"></i> Ir a Automatrade</a>
+                        </div><!--//item-->
                         <div class="item featured text-center">
                             <h3 class="title"><a href="http://www.coinmarketpred.com"
                                                  target="_blank">CoinMarketPred</a></h3>
@@ -119,10 +233,18 @@
                                     <img class="img-responsive project-image"
                                          src="assets/images/cmp-project.png" alt="project name"/>
                                 </a>
-                                <div class="ribbon">
-                                    <div class="text">New</div>
-                                </div>
                             </div>
+                            <div class="desc text-left">
+
+                                <h5>Tecnologías empleadas</h5>
+                                <ul>
+                                    <li>Symfony 4.2</li>
+                                    <li>Webpack</li>
+                                    <li>Sass</li>
+                                    <li>jQuery</li>
+                                    <li>mySQL</li>
+                                </ul>
+                            </div><!--//desc-->
                             <div class="desc text-left">
                                 <h5>Algunas funcionalidades</h5>
                                 <ul>
@@ -160,9 +282,6 @@
                                     <img alt="project name"
                                          class="img-thumbnail project-image" src="assets/images/projects/tapa.png"/>
                                 </a>
-                                <div class="ribbon">
-                                    <div class="text">New</div>
-                                </div>
                             </div>
                             <div class="desc text-left">
                                 <h5>Algunas funcionalidades</h5>
@@ -329,7 +448,7 @@
                                 <h3 class="level-title">Yii 2<span class="level-label">Trabajando!
                                         </span></h3>
                                 <div class="level-bar">
-                                    <div class="level-bar-inner" data-level="50%">
+                                    <div class="level-bar-inner" data-level="90%">
                                     </div>
                                 </div><!--//level-bar-->
                             </div><!--//item-->
