--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             <li><i class="fa fa-google"></i><span class="sr-only">Gmail:</span><a
                                     href="mailto:carmelormairez79@gmail.com">carmeloramirez79@gmail.com</a></li>
                             <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a
-                                    href="http://kar.cat">http ://www.kar.cat</a></li>
+                                    href="https://carmeloramirez.com">carmeloramirez.com</a></li>
                         </ul>
                     </div><!--//content-->
                 </div><!--//section-inner-->
@@ -715,7 +715,7 @@
 <footer class="footer">
     <div class="container text-center">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-        <small class="copyright"> by <a href="http://kar.cat"
+        <small class="copyright"> by <a href="https://www.carmeloramirez.com"
                                         target="_blank">Carmelo
             Ramírez</a> Desarrollador Web
         </small>
