Update bio text

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
                         <div class="skillset">
                             <div class="item">
-                                <h3 class="level-title">Symfony<span class="level-label">Trabajando!
+                                <h3 class="level-title">Symfony (2.4 - 4.3)<span class="level-label">Trabajando!
                                         </span></h3>
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="99%">
